Fixed up tutorial notebooks and main code so that both work

--- a/tutorials/1_Introduction.ipynb
+++ b/tutorials/1_Introduction.ipynb
@@ -55,12 +55,24 @@
    "source": [
     "### 1.2 Import modules\n",
     "\n",
-    "Once we have downloaded the dataset, we'll start by importing all the necessary modules."
+    "Once we have downloaded the dataset, we'll start by importing all the necessary modules.\n",
+    "\n",
+    "For this tutorial, we use [Jupyter Dynamic Classes](https://alexhagen.github.io/jdc/) so if not already installed please install. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "ca1aa5e3-4537-4e1e-8629-bb134e749707",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install jdc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d9caff25",
    "metadata": {},
    "outputs": [],
@@ -133,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "99b5130c",
    "metadata": {},
    "outputs": [],
@@ -195,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dabd3c7d",
    "metadata": {},
    "outputs": [],
@@ -237,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "623595aa",
    "metadata": {},
    "outputs": [],
@@ -306,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "68a22d64",
    "metadata": {},
    "outputs": [],
@@ -342,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e99f6d13",
    "metadata": {},
    "outputs": [],
@@ -385,46 +397,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "55aa0e9b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Succesfully added feature_layer\n",
-      "Succesfully added output_layer\n",
-      "VPRTempo succesfully initialized\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "VPRTempo(\n",
-       "  (quant): QuantStub()\n",
-       "  (dequant): DeQuantStub()\n",
-       "  (add): FloatFunctional(\n",
-       "    (activation_post_process): Identity()\n",
-       "  )\n",
-       "  (feature_layer): SNNLayer(\n",
-       "    (exc): Linear(in_features=784, out_features=1568, bias=False)\n",
-       "    (inh): Linear(in_features=784, out_features=1568, bias=False)\n",
-       "  )\n",
-       "  (output_layer): SNNLayer(\n",
-       "    (exc): Linear(in_features=1568, out_features=500, bias=False)\n",
-       "    (inh): Linear(in_features=1568, out_features=500, bias=False)\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = VPRTempo()\n",
+    "model_logger(model)\n",
     "model.train()"
    ]
   },
@@ -440,18 +419,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "dc786b3d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "VPRTempo78415685001.pth\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def generate_model_name(model):\n",
     "    \"\"\"\n",
@@ -485,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6714bc35",
    "metadata": {},
    "outputs": [],
@@ -524,53 +495,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0075638b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training layer: feature_layer\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training : 100%|████████████████████████████| 4000/4000 [01:13<00:00, 54.67it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training layer: output_layer\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training : 100%|████████████████████████████| 4000/4000 [00:55<00:00, 72.47it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All layers trained succesfully\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Keep track of trained layers to pass data through them\n",
     "trained_layers = [] \n",
@@ -600,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "53ededaa",
    "metadata": {},
    "outputs": [],
@@ -627,13 +555,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a368c532",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%add_to VPRTempo\n",
-    "def evaluate(self, test_loader, layers=None):\n",
+    "def evaluate(self, model, test_loader, layers=None):\n",
     "    \"\"\"\n",
     "    Run the inferencing model and calculate the accuracy.\n",
     "\n",
@@ -688,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f4a1adc8",
    "metadata": {},
    "outputs": [],
@@ -720,23 +648,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "30d51e96",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Succesfully added feature_layer\n",
-      "Succesfully added output_layer\n",
-      "VPRTempo succesfully initialized\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set the model to evaluation mode and set configuration\n",
     "model = VPRTempo()\n",
+    "model.model_logger()\n",
     "model.eval()\n",
     "\n",
     "# Load the model\n",
@@ -758,34 +677,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "37aa84e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running the test network: 100%|██████████████| 500/500 [00:02<00:00, 196.29it/s]\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'VPRTempo' object has no attribute 'logger'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Use evaluate method for inference accuracy\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m model\u001b[38;5;241m.\u001b[39mevaluate(test_loader, layers\u001b[38;5;241m=\u001b[39mlayer_names)\n",
-      "File \u001b[0;32m<string>:41\u001b[0m, in \u001b[0;36mevaluate\u001b[0;34m(self, test_loader, layers)\u001b[0m\n",
-      "File \u001b[0;32m~/mambaforge/envs/vprtempo/lib/python3.11/site-packages/torch/nn/modules/module.py:1614\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1612\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m modules:\n\u001b[1;32m   1613\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> 1614\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m   1615\u001b[0m     \u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m, name))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'VPRTempo' object has no attribute 'logger'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use evaluate method for inference accuracy\n",
-    "model.evaluate(test_loader, layers=layer_names)"
+    "model.evaluate(model, test_loader, layers=layer_names)"
    ]
   },
   {
@@ -828,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
