Updating the tutorials

--- a/tutorials/1111_BasicDemo.ipynb
+++ b/tutorials/1111_BasicDemo.ipynb
@@ -5,7 +5,7 @@
    "id": "b34c7b8a-e7bb-47f4-b558-be1bde9a7b37",
    "metadata": {},
    "source": [
-    "## VPRTempoQuant - Basic Demo for a quantized version of VPRTempo\n",
+    "## VPRTempo & VPRTempoQuant - Basic Demo\n",
     "\n",
     "### By Adam D Hines (https://research.qut.edu.au/qcr/people/adam-hines/)\n",
     "\n",
@@ -15,16 +15,14 @@
     "\n",
     "### Introduction\n",
     "\n",
-    "This is a basic, extremely simplified version of VPRTempo that highlights how images are transformed, spikes and weights are used, and the readout for performance using a model trained using Quantized Aware Training (QAT). We will view the system through the lens of integer based weights and spikes to see how a quantized version of VPRTempo operates under the hood.\n",
-    "\n",
-    "*Note: In this example, we will lose some amount of precision because we are only using integers for all calculations. In the deployed version, PyTorch quantizes and dequantizes spikes and weights so that some calculations are performed in the floating point domain. As such, this tutorial should be taken purely for conceptual understanding of a quantized version of VPRTempo and not for implementation purposes.*\n",
+    "This is a basic, extremely simplified version of VPRTempo that highlights how images are transformed, spikes and weights are used, and the readout for performance using a model trained using our base system and the Quantized Aware Training (QAT) version. This is a basic, extremely simplified version of VPRTempo that highlights how images are transformed, spikes and weights are used, and the readout for performance. Although the proper implementation is in [PyTorch](https://pytorch.org/), we present a simple NumPy example to get started. As in the paper, we will present a simple example using the [Nordland](https://webdiis.unizar.es/~jmfacil/pr-nordland/#download-dataset) dataset with pre-trained set of weights.\n",
     "\n",
     "Before starting, make sure the following packages are installed and imported:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c879cd02-82db-441d-9476-fff1925bf494",
    "metadata": {},
    "outputs": [],
