Updating documentation for pretrained weights and tutorial materials

--- a/tutorials/1_BasicDemo.ipynb
+++ b/tutorials/1_BasicDemo.ipynb
@@ -44,24 +44,7 @@
    "id": "66b11853-6e17-4884-ac92-d35d814add42",
    "metadata": {},
    "source": [
-    "Next, we will need to get the pretrained weights for the model. To get them and the other materials for the , we will use [Git Large File Storage](https://git-lfs.com/) to download the required materials. Please ensure you have it downloaded on your local machine prior to running these tutorials."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be03b081",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import subprocess\n",
-    "\n",
-    "# Run Git LFS pull command\n",
-    "try:\n",
-    "    result = subprocess.run(\"git lfs pull\", shell=True, check=True, stdout=subprocess.PIPE, stderr=subprocess.PIPE, universal_newlines=True)\n",
-    "    print(\"Git LFS pull successful.\")\n",
-    "except subprocess.CalledProcessError as e:\n",
-    "    print(f\"Git LFS pull failed with error:\\n{e.stderr}\")"
+    "Next, we will need to get the pretrained weights for the model. To get them and the other materials, please download them from [here](https://www.dropbox.com/scl/fi/bxbzm47kxl24x979q5r5s/1_BasicDemo.zip?rlkey=0umij016whwgm11frzlk63v5k&st=hncbx0ld&dl=0). Unzip the files into the `./tutorials/mats/` folder."
    ]
   },
   {
